Modify text2img response model schema
